--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,14 +1,7 @@
-# main links
 main:
-  - title: "Tages"
+  - title: "Tags"
     url: /tags/
- - title: "Category"
+  - title: "Category"
     url: /categories/
-
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+  - title: "Search"
+    url: /search/
